--- a/style.css
+++ b/style.css
@@ -45,24 +45,51 @@ body {
 	transition: all 0.5s cubic-bezier(0, 1.27, 0.89, 0.9);
 	border: solid 3px white;
 	box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
-	top: 35%;
+	top: 28%;
 	left: 50%;
 	z-index: 2;
 	transform: translate(-50%, -50%) scaleX(-1);
 }
 
-#prediction {
+.prediction {
     position: fixed;
     top: 66%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 1rem;
+    padding: 0.5rem;
     background-color: #b2bec3;
     border: 5px solid #636e7252;
     border-radius: 0.5rem;
     min-width: 65%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
+    z-index: 5;
+    transition: all 0.5s cubic-bezier(0.4, 0, 1, 1);
+}
+
+.predictions {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    margin: 0;
+}
+
+.predictions li {
+    display: flex;
+    align-items: center;
+}
+
+.predictionDiv {
+    flex: 1;
+    text-align: left;
+    margin-right: 0.5rem;
+}
+
+.predictionPercentage {
+    color: green;
 }
