--- a/style.css
+++ b/style.css
@@ -51,6 +51,18 @@ body {
 	transform: translate(-50%, -50%) scaleX(-1);
 }
 
+.leaveFrame {
+    height: 200px !important;
+    width: 200px !important;
+    transition: all 0.5s ease-out;
+    border: solid 3px white;
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+    bottom: -10%;
+    left: -31%;
+    z-index: 2;
+    transform: translate(-50%, -50%) scaleX(-1);
+}
+
 .prediction {
     position: fixed;
     top: 66%;
