Minified HTML and CSS

--- a/css/style.css
+++ b/css/style.css
@@ -1,128 +1,1 @@
-@font-face{font-family:"sans";src:url(/css/sans.ttf) format("truetype");font-display:swap}
-
-html,
-body {
-    font-family: "sans", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	margin: 0;
-	padding: 0;
-	height: 100%;
-	width: 100%;
-}
-
-#camera,
-#camera--view,
-#camera--sensor,
-#camera--output {
-	position: fixed;
-	height: 100%;
-	width: 100%;
-	object-fit: cover;
-}
-
-#camera--view,
-#camera--sensor,
-#camera--output {
-	/* transform: scaleX(-1); */
-	filter: FlipH;
-}
-
-#camera--trigger {
-	/* width: 200px; */
-	color: white;
-	font-size: 0;
-	border-radius: 50%;
-	border: none;
-	background-color: #57606f;
-	padding: 9px;
-	text-align: center;
-	box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
-	position: fixed;
-	bottom: 30px;
-	left: 50%;
-	transform: translate(-50%, -18%);
-}
-
-.taken {
-	height: 200px !important;
-	width: 200px !important;
-	transition: all 0.5s cubic-bezier(0, 1.27, 0.89, 0.9);
-	border: solid 3px white;
-	box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
-	top: 28%;
-	left: 50%;
-	z-index: 2;
-	transform: translate(-50%, -50%) scaleX(-1);
-}
-
-.leaveFrame {
-    height: 200px !important;
-    width: 200px !important;
-    transition: all 0.5s ease-out;
-    border: solid 3px white;
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
-    bottom: -10%;
-    left: -31%;
-    z-index: 2;
-    transform: translate(-50%, -50%) scaleX(-1);
-}
-
-.prediction {
-    position: fixed;
-    top: 66%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 0.5rem;
-    background-color: white;
-    border: 5px solid #636e7252;
-    border-radius: 0.5rem;
-    /* min-width: 65%; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    z-index: 5;
-    transition: all 0.5s cubic-bezier(1, 0.15, 0, 1.1);
-    min-width: 256px;
-    color: #444444;
-}
-
-.statusSpanClass {
-    position: fixed;
-    padding: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    z-index: 5;
-    transition: all 0.5s cubic-bezier(0.4, 0, 1, 1);
-    top: 28%;
-    left: 50%;
-    z-index: 2;
-    transform: translate(-50%, -50%);
-}
-
-.predictions {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    margin: 0;
-}
-
-.predictions li {
-    display: flex;
-    align-items: center;
-}
-
-.predictionDiv {
-    flex: 1;
-    text-align: left;
-    margin-right: 0.5rem;
-}
-
-.predictionPercentage {
-    color: green;
-}
+@font-face{font-family:sans;src:url(/css/sans.ttf) format("truetype");font-display:swap}body,html{font-family:sans,'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;margin:0;padding:0;height:100%;width:100%}#camera,#camera--output,#camera--sensor,#camera--view{position:fixed;height:100%;width:100%;object-fit:cover}#camera--output,#camera--sensor,#camera--view{filter:FlipH}#camera--trigger{color:#fff;font-size:0;border-radius:50%;border:none;background-color:#57606f;padding:9px;text-align:center;box-shadow:0 5px 10px 0 rgba(0,0,0,.2);position:fixed;bottom:30px;left:50%;transform:translate(-50%,-18%)}.taken{height:200px!important;width:200px!important;transition:all .5s cubic-bezier(0,1.27,.89,.9);border:solid 3px #fff;box-shadow:0 5px 10px 0 rgba(0,0,0,.2);top:28%;left:50%;z-index:2;transform:translate(-50%,-50%) scaleX(-1)}.leaveFrame{height:200px!important;width:200px!important;transition:all .5s ease-out;border:solid 3px #fff;box-shadow:0 5px 10px 0 rgba(0,0,0,.2);bottom:-10%;left:-31%;z-index:2;transform:translate(-50%,-50%) scaleX(-1)}.prediction{position:fixed;top:66%;left:50%;transform:translate(-50%,-50%);padding:.5rem;background-color:#fff;border:5px solid #636e7252;border-radius:.5rem;display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;z-index:5;transition:all .5s cubic-bezier(1,.15,0,1.1);min-width:256px;color:#444}.statusSpanClass{position:fixed;padding:.5rem;display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;z-index:5;transition:all .5s cubic-bezier(.4,0,1,1);top:28%;left:50%;z-index:2;transform:translate(-50%,-50%)}.predictions{list-style-type:none;padding:0;display:flex;flex-direction:column;margin:0}.predictions li{display:flex;align-items:center}.predictionDiv{flex:1;text-align:left;margin-right:.5rem}.predictionPercentage{color:green}
